# semantic-data-aggregator

./: .dockerignore  .env  .env.clarity  .gitignore  API REST Flink.postman_collection.json  API REST Kafka Connect.postman_collection.json  NGSI-LD Prometheus.postman_collection.json  PrometheusToAvro.xml  README.md  build-docker.sh  ceos-startup.sh  docker-compose-app-manager.yml  docker-compose-arista.yml  docker-compose-cds-tester.yml  docker-compose-centralized.yml  docker-compose-clarity.yml  docker-compose-confluent-registry.yml  docker-compose-dcp.yml  docker-compose-gnmi.yml  docker-compose-nifi.yml  docker-compose-palantir.yml  docker-compose-prometheus.yml  docker-compose-query.yml  docker-compose-scorpio.yml  docker-compose-statefun.yml  docker-compose-stream-processing.yml  docker-compose.yml  test.md
app-manager/: Dockerfile  requirements.txt
collector-centralized/: Dockerfile  requirements.txt
complex-publishers/: Dockerfile
consumer/: Dockerfile
consumers/clarity-data-lake/data-lake-explorer/: Dockerfile  pyproject.toml
consumers/clarity-data-lake/data-lake-explorer/data_lake_explorer/: main.py
consumers/clarity-data-lake/data-lake-explorer/tests/: test_data_lake_explorer.py
context-catalog/: application-context.jsonld  common-context.jsonld  context.jsonld  metric-context.jsonld  prometheus-context.jsonld  stream-context.jsonld  telemetry-context.jsonld
docker/consumer/: Dockerfile  pyproject.toml
docker/consumer/consumer/: main.py
docker/data-lake-explorer/: Dockerfile  docker-entrypoint.sh  pyproject.toml
docker/data-lake-explorer/data_lake_explorer/: main.py  registration.py
docker/data-lake-explorer/data_lake_explorer/clients/: data_lake.py
docker/data-lake-explorer/data_lake_explorer/config/: log.yaml
docker/weaver/: Dockerfile  docker-entrypoint.sh  pyproject.toml
docker/weaver/app/: main.py
docker/weaver/app/weaver/: applications.py  checking.py  health.py  orchestration.py
docker/weaver/weaver/: applications.py  checking.py  health.py  main.py  orchestration.py
docker/weaver/weaver/applications/: datalake.py  gnmi.py  interfaceKPI.py
docker/weaver/weaver/orchestration/: flink.py  nifi.py
docs/: data-aggregator.drawio  semantic aggregator.drawio
experimenter/: Dockerfile
semantic-metrics-datamodels/ngsi-ld/data-models/: README.md  pyproject.toml
semantic-metrics-datamodels/ngsi-ld/data-models/bindings/: common.py  notification.py
semantic-metrics-datamodels/ngsi-ld/data-models/bindings/clarity_data_lake/: bucket.py  object.py
semantic-metrics-datamodels/ngsi-ld/data-models/bindings/pipelines/: task.py
semantic-metrics-datamodels/ngsi-ld/data-models/datamodel-codegen/: aliases.json
semantic-metrics-datamodels/ngsi-ld/data-models/datamodel-codegen/templates/: Config.jinja2
semantic-metrics-datamodels/ngsi-ld/data-models/examples/clarity_data_lake/bucket/: example-normalized.json
semantic-metrics-datamodels/ngsi-ld/data-models/examples/clarity_data_lake/datalake/: example-normalized.json
semantic-metrics-datamodels/ngsi-ld/data-models/examples/clarity_data_lake/object/: example-normalized.json
semantic-metrics-datamodels/ngsi-ld/data-models/examples/clarity_data_lake/owner/: example-normalized.json
semantic-metrics-datamodels/ngsi-ld/data-models/examples/pipelines/datalake/: example-normalized-packet-loss.json  example-normalized-throughput.json
semantic-metrics-datamodels/ngsi-ld/data-models/examples/pipelines/gnmi/: example-normalized-on-change.json  example-normalized-periodic.json
semantic-metrics-datamodels/ngsi-ld/data-models/examples/pipelines/interfaceKPI/: example-normalized-packet-loss.json  example-normalized-throughput.json
semantic-metrics-datamodels/ngsi-ld/data-models/examples/telemetry/credentials/: example-normalized.json
semantic-metrics-datamodels/ngsi-ld/data-models/examples/telemetry/device/: example-normalized.json
semantic-metrics-datamodels/ngsi-ld/data-models/examples/telemetry/gnmi/: example-normalized.json
semantic-metrics-datamodels/ngsi-ld/data-models/examples/telemetry/module/: example-normalized.json
semantic-metrics-datamodels/ngsi-ld/data-models/examples/telemetry/netconf/: example-normalized.json
semantic-metrics-datamodels/ngsi-ld/data-models/schemas/: common.json  entity.json  geometry.json  notification.json  subscription.json
semantic-metrics-datamodels/ngsi-ld/data-models/schemas/clarity_data_lake/: bucket.json  datalake.json  object.json  owner.json
semantic-metrics-datamodels/ngsi-ld/data-models/schemas/pipelines/: task.json
semantic-metrics-datamodels/ngsi-ld/data-models/schemas/pipelines/clarity/: datalake.json  gnmi.json  interfaceKPI.json
semantic-metrics-datamodels/ngsi-ld/data-models/schemas/telemetry/: credentials.json  device.json  gnmi.json  module.json  netconf.json
semantic-metrics-datamodels/ngsi-ld/data-models/tests/: clarity_data_lake.py  pipelines.py  telemetry.py
semantic-tools/: README.md  pyproject.toml
semantic-tools/semantic_tools/bindings/: common.py  entity.py  geometry.py  notification.py  subscription.py
semantic-tools/semantic_tools/bindings/clarity_data_lake/: bucket.py  datalake.py  object.py  owner.py
semantic-tools/semantic_tools/bindings/pipelines/clarity/: datalake.py  gnmi.py  interfaceKPI.py
semantic-tools/semantic_tools/bindings/telemetry/: credentials.py  device.py  gnmi.py  module.py  netconf.py
semantic-tools/semantic_tools/flink/: client.py
semantic-tools/semantic_tools/models/: application.py  common.py  data_lake.py  metric.py  nfv.py  stream.py  telemetry.py
semantic-tools/semantic_tools/ngsi_ld/: api.py  client.py
semantic-tools/semantic_tools/nifi/: client.py
semantic-tools/tests/: README.md  test_ngsi_ld.py
sources/telemetry/telemetry-explorer/: Dockerfile  pyproject.toml
sources/telemetry/telemetry-explorer/tests/: test_telemetry_explorer.py
(+1215 files in other folders)
