[tool.poetry]
name = "semantic_tools"
version = "0.1.0"
description = "Tools for the semantic data aggregator components"
authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
nipyapi = "^0.16.2"
PyYAML = "^5.4.1"
requests = "^2.26.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
