[tool.poetry]
name = "weaver"
version = "0.1.0"
description = ""
authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
semantic-tools = ">=0.1.0"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
redis = "^4.3.1"
flink-client = { git = "https://github.com/giros-dit/python-flink-client.git", branch = "main" }
ngsi-ld-client = { git = "https://github.com/giros-dit/python-ngsi-ld-client.git", branch = "main" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = ">=4.0.1"
semantic-tools = { path = "../../semantic-tools", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
