[tool.poetry]
name = "data-models"
version = "0.1.0"
description = ""
authors = ["Ignacio Dominguez Martinez-Casanueva <i.dominguezm@alumnos.upm.es>"]

[tool.poetry.dependencies]
python = "^3.9"
datamodel-code-generator = {extras = ["http"], version = "^0.12.0"}

[tool.poetry.dev-dependencies]
flake8-black = "^0.3.2"
isort = "^5.10.1"

[tool.black]
skip-string-normalization = true
line-length = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80
known_first_party = "kelvin"

[tool.datamodel-codegen]
allow-population-by-field-name = true
disable-timestamp = true
enum-field-as-literal = "one"
field-constraints = true
snake-case-field = true
strict-types = ["bool", "bytes", "int", "float", "str"]
strip-default-none = true
target-python-version = "3.9"
use-default = true
use-schema-description = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
